@@ -2,6 +2,8 @@
 
 	* haskell-cabal.el (haskell-cabal-get-setting): New function.
 
+	* inf-haskell.el (inferior-haskell-find-project-root): Use it.
+
 	* haskell-c.el: New file.
 
 2007-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>
